Fix z-index

--- a/src/angular-timeline.scss
+++ b/src/angular-timeline.scss
@@ -46,7 +46,6 @@ timeline-badge, .timeline-beginning {
   left: 20%;
   margin-left: -15px;
   background-color: #999999;
-  z-index: 100;
   border-top-right-radius: 50%;
   border-top-left-radius: 50%;
   border-bottom-right-radius: 50%;
